Update; Fix mem alignent crash

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,3 @@
-
-DONE: TODO: 
-- big button support for the list mode change button
-
 TODO:
 - sample names shown with xmaplay060
 
@@ -16,26 +12,9 @@ TODO:
 --> assumption is that module repeats, MIDI/VGM/MDX don't though, so they
     keep rolling the timer.. feature?
 
-FIXED: TODO:
-- sample scopes broke with the last scope change (moduleaddress zero check)
-
 TODO:
 - hippo face in scopes is using wrong colors in some RTG modes.
   this is because it assumes colors 0-3 to work as on denise modes?
-
-FIXED: TODO:
-- eject clears the scopes and prints the head
-
-FIXED: TODO:
-- sample/PS3M: use cybersound if set in ENV
-- rename cybersoud button to: Sample 14-bit out or something
-
-FIX: TODO:
-- MHI startataan vaikka ei olisi edes mp3-file kyseessä
-
-
-FIXED: TODO:
-- ctrl+g won't work when pipe streamer is active
 
 TODO:
 - sample scope with sid+resid:
@@ -46,9 +25,6 @@ TODO:
 - Crockettstheme2023 from Aminet, keeps crashing HippoPlayer, 
   Running under OS 3.2.2 and Latest Version
 - Guru 8000 0005 with both OctaMixPlayer v7.0 and v7.1 
-
-FIXED: TODO:
-- soundfx: check this identifier, crash?
 
 TODO:
 - For the crash with the combination of ML+IT files, add the two ML files, then
@@ -122,6 +98,35 @@ TODO:
 ------------------------------------------------------------------------------
 ------------------------------------------------------------------------------
 ------------------------------------------------------------------------------
+
+FIXED: TODO:
+- soundfx: check this identifier, crash?
+
+FIXED: TODO:
+- eject clears the scopes and prints the head
+
+FIXED: TODO:
+- sample/PS3M: use cybersound if set in ENV
+- rename cybersoud button to: Sample 14-bit out or something
+
+FIX: TODO:
+- MHI startataan vaikka ei olisi edes mp3-file kyseessä
+
+
+FIXED: TODO:
+- ctrl+g won't work when pipe streamer is active
+
+
+DONE: TODO:
+- hover mouse over volumebar, tooltip for search bar appears?
+  only with normal sized buttons
+
+DONE: TODO: 
+- big button support for the list mode change button
+
+
+FIXED: TODO:
+- sample scopes broke with the last scope change (moduleaddress zero check)
 
 FIXED: TODO:
 - would it be possible to optionally not clear the scopes when a MOD is paused ? 
