--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,8 @@
+TODO:
+- improve PT end detection heuristics
+- https://github.com/koobo/HippoPlayer/issues/26
+- Many trick pattern modules
+
 
 TODO:
 - proplayer.a support for MEDs§
